--- a/src/util/styles/colors.scss
+++ b/src/util/styles/colors.scss
@@ -1,8 +1,10 @@
 $blue: #0078d4;
-$white: #ffffff;
+$white: #FFFFFF;
 $gray: rgb(243, 242, 241);
 $black: #000000;
+$red: #FF0000;
 
 $primary-color: $blue;
 $border-color: $gray;
 $overlay-color: $black;
+$error-color: $red;
