--- a/src/components/Gallery/index.module.scss
+++ b/src/components/Gallery/index.module.scss
@@ -2,10 +2,13 @@
 @import '../../util/styles/spacing.scss';
 @import '../../util/styles/colors.scss';
 
+// .grid {
+//     // display: flex;
+//     // flex-flow: row wrap;
+//     // align-content: space-evenly;
+//     // overflow: hidden;
+// }
 .grid {
-    display: flex;
-    flex-flow: row wrap;
-    align-content: space-evenly;
     overflow: hidden;
 }
 
@@ -15,7 +18,8 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    margin: $small-spacing;
+    height: auto;
+    margin: $small-spacing 0;
 
     @media (#{$large}) {
         will-change: transform;
@@ -24,14 +28,22 @@
             transform: scale(1.1);
         }
     }
+}
 
-    @media (#{$small-up}) {
+@media (#{$small-up}) {
+    .grid {
+        display: flex;
+        flex-flow: row wrap;
+        align-content: space-evenly;
+    }
+
+    .cell {
         flex: 1 0 auto;
         align-self: stretch;
         width: auto;
+        margin : $small-spacing;
     }
 }
-
 .cell--error {
     min-width: 200px;
     &:hover {
